[package]
name = "tron-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tron"
path = "src/main.rs"

[lib]
name = "tron_lib"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive"] }
dotenvy = { version = "0.15.7", features = ["clap", "cli"] }
prost = "0.13.1"
prost-types = "0.13.1"
rayon = "1.10.0"
tonic = { version = "0.12.2", features = ["tls", "prost"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
tonic-build = { version = "0.12.2", features = ["cleanup-markdown"] }

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
pretty_assertions = "1.4.0"
